--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2009-10-07  Leonardo Ferreira Fontenelle  <leonardof@gnome.org>
+
+	* configure.ac: Post release version bump to 0.2.
+
+2009-10-07  Leonardo Ferreira Fontenelle  <leonardof@gnome.org>
+
+	* NEWS: Updated with information for release 0.1.
+
 2009-10-05  Leonardo Ferreira Fontenelle  <leonardof@gnome.org>
 
 	* debian/changelog: Changed Debian version to the name ("Diablo")
