--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2009-10-13  Leonardo Ferreira Fontenelle  <leonardof@gnome.org>
+
+	* classix.in:
+	* src/main.py:
+	Added command line interface.
+
 2009-10-08  Leonardo Ferreira Fontenelle  <leonardof@gnome.org>
 
 	* src/main.py:
