--- a/branches/maemo/ChangeLog
+++ b/branches/maemo/ChangeLog
@@ -1,5 +1,9 @@
 2009-10-13  Leonardo Ferreira Fontenelle  <leonardof@gnome.org>
 
+	* src/main.py: (Hopefully) fixed threading in the GUI.
+
+2009-10-13  Leonardo Ferreira Fontenelle  <leonardof@gnome.org>
+
 	* classix.in:
 	* src/main.py:
 	Added command line interface.
