--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2009-10-26  Leonardo Ferreira Fontenelle  <leonardof@gnome.org>
+
+	* src/main.py: Allow search to return more codes than what a single SQLite
+	statement could handle. Fixes issue #13.
+
 2009-10-21  Leonardo Ferreira Fontenelle  <leonardof@gnome.org>
 
 	* src/main.py:
