--- a/branches/maemo/ChangeLog
+++ b/branches/maemo/ChangeLog
@@ -1,5 +1,9 @@
 2009-12-27  Leonardo Ferreira Fontenelle  <leonardof@gnome.org>
 
+	* debian/changelog: Updated to Classix 0.3.1.
+
+2009-12-27  Leonardo Ferreira Fontenelle  <leonardof@gnome.org>
+
 	* NEWS: Added missing news for Classix 0.3 and 0.3.1.
 
 2009-12-27  Leonardo Ferreira Fontenelle  <leonardof@gnome.org>
